--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Murali Krishna Pogiri",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.15.4",
     "process": "^0.11.10"
   },
